// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select snapshot testing selects options 1`] = `
<form>
  <div
    className="select-options t-selected-options"
  >
    Buffon, Pirlo
  </div>
  <select
    className="select t-select"
    onChange={[Function]}
  >
    <option
      className="t-option"
      value="8"
    >
      Conte
    </option>
    <option
      className="t-option"
      value="10"
    >
      Del Piero
    </option>
    <option
      className="t-option"
      value="1"
    >
      Buffon
    </option>
    <option
      className="t-option"
      value="21"
    >
      Pirlo
    </option>
  </select>
  <div>
    <button
      className="t-reset"
      onClick={[Function]}
      type="reset"
    >
      Clear
    </button>
    <button
      className="t-submit"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`Select snapshot testing selects options 2`] = `
<form>
  <div
    className="select-options t-selected-options"
  >
    Buffon, Pirlo, Del Piero
  </div>
  <select
    className="select t-select"
    onChange={[Function]}
  >
    <option
      className="t-option"
      value="8"
    >
      Conte
    </option>
    <option
      className="t-option"
      value="10"
    >
      Del Piero
    </option>
    <option
      className="t-option"
      value="1"
    >
      Buffon
    </option>
    <option
      className="t-option"
      value="21"
    >
      Pirlo
    </option>
  </select>
  <div>
    <button
      className="t-reset"
      onClick={[Function]}
      type="reset"
    >
      Clear
    </button>
    <button
      className="t-submit"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`Select snapshot testing selects options 3`] = `
<form>
  <div
    className="select-options t-selected-options"
  />
  <select
    className="select t-select"
    onChange={[Function]}
  >
    <option
      className="t-option"
      value="8"
    >
      Conte
    </option>
    <option
      className="t-option"
      value="10"
    >
      Del Piero
    </option>
    <option
      className="t-option"
      value="1"
    >
      Buffon
    </option>
    <option
      className="t-option"
      value="21"
    >
      Pirlo
    </option>
  </select>
  <div>
    <button
      className="t-reset"
      onClick={[Function]}
      type="reset"
    >
      Clear
    </button>
    <button
      className="t-submit"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
